fix: use the env variable HANGFIRE_MANAGEMENT_PASSWORD to configure the Hangfire Dashbord

--- a/NOITechParkDoorSignage/appsettings.json
+++ b/NOITechParkDoorSignage/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
     "MinimumLevel": "Warning",
     "WriteTo": [
       {
@@ -20,7 +20,7 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Enrich": ["FromLogContext", "WithMachineName"],
     "Properties": {
       "ApplicationName": "NOITechParkDoorSignage"
     }
@@ -31,14 +31,15 @@
       "Name": "xxx",
       "Location": "xxx",
       "Email": "xxx",
-      "AssociatedLabelMACs": [
-        "aa:bb"
-      ]
+      "AssociatedLabelMACs": ["aa:bb"]
     }
   ],
   "MicrosoftGraph": {
     "TenantId": "${AZURE_TENANT_ID}",
     "ClientId": "${AZURE_CLIENT_ID}",
     "ClientSecret": "${AZURE_CLIENT_SECRET}"
+  },
+  "Hangfire": {
+    "ManagementPassword": "${HANGFIRE_MANAGEMENT_PASSWORD}"
   }
 }
